# AMA

./: .gitignore  CLAUDE.md  CROSS_PLATFORM_SUMMARY.md  PROJECT_CONTEXT_SUMMARY.md  README.md  convert_csv_names.py  demo_dynamic_optimization.py  demo_dynamic_optimization_integrated.py  environment.yml  plot_all_regions.py  plot_combined_analysis.py  plot_dvdt_vs_tp.py  plot_larynx.py  plot_mass_analysis.py  plot_mass_analysis_all.py  pyproject.toml  requirements.txt  setup.sh  temporal_analysis.py  temporal_analysis_diff.py  test_xyz_formats.py  visualize_patch_regions.py
src/: add_coordinates_to_tracking.py  analyze_stl_csv_matching.py  comparison_analysis.py  determine_csv_data_type.py  main.py
src/analysis/: patch_region_analysis.py
src/data_processing/: trajectory.py
src/plotting/: analysis_plots.py
src/surface_painting/: USAGE.md  __init__.py  coordinate_mapper.py  painted_region_pipeline.py  regional_analyzer.py  stl_painter.py
src/utils/: file_processing.py  parallel_csv_processing.py  signal_processing.py
src/visualization/: cfd_analysis_3x3.py  interactive_point_selector.py  interactive_selection.py  paint_brush.py  paint_brush_2d.py  paint_brush_3d_enhanced.py  patch_visualization.py  point_picker.py  point_picker_gui.py  surface_plots.py
